# harm

./: .coderabbit.yaml  Cargo.toml  LICENSE  README.md
aarchmrs-gen/: Cargo.toml
aarchmrs-gen/src/: downloads.rs  encoding.rs  generation.rs  lib.rs  stack.rs
aarchmrs-instructions/: CHANGELOG.md  Cargo.toml  README.md  build.rs
aarchmrs-instructions/src/: A32.rs  A64.rs  T32.rs  lib.rs
aarchmrs-instructions/src/A32/: brblk.rs  cops_as.rs  dp.rs  ldstimm.rs  ldstreg.rs  media.rs  uncond_as.rs
aarchmrs-instructions/src/A32/brblk/: b_imm.rs  ldstexcept.rs  ldstm.rs
aarchmrs-instructions/src/A32/cops_as/: advsimdext.rs  fpdp.rs  svcall.rs  sys_mov32.rs  sysldst_mov64.rs
aarchmrs-instructions/src/A32/dp/: dpimm.rs  dpmisc.rs  dpregis.rs  dpregrs.rs  mul_half.rs  mul_word.rs  sync.rs  xldst.rs
aarchmrs-instructions/src/A32/media/: bfi.rs  bfx.rs  extend.rs  pack.rs  parallel.rs  reverse.rs  sat16.rs  sat32.rs  selbytes.rs  smul_div.rs  udf.rs  usad.rs
aarchmrs-instructions/src/A32/uncond_as/: advsimddp.rs  advsimdls.rs  uncondhints.rs  uncondmisc.rs
aarchmrs-instructions/src/A64/: control.rs  dpimm.rs  dpreg.rs  ldst.rs  reserved.rs  simd_dp.rs  sme.rs  sve.rs
aarchmrs-instructions/src/A64/control/: barriers.rs  branch_imm.rs  branch_reg.rs  compbranch.rs  compbranch_imm.rs  compbranch_regs.rs  compbranch_regs2.rs  condbranch.rs  exception.rs  hints.rs  miscbranch.rs  pstate.rs  syspairinstrs.rs  systeminstrs.rs  systeminstrswithreg.rs  systemmove.rs  systemmovepr.rs  systemresult.rs  tchange_imm.rs  tchange_reg.rs  testbranch.rs
aarchmrs-instructions/src/A64/dpimm/: addsub_imm.rs  addsub_immtags.rs  bitfield.rs  dp_1src_imm.rs  extract.rs  log_imm.rs  minmax_imm.rs  movewide.rs  pcreladdr.rs
aarchmrs-instructions/src/A64/dpreg/: addsub_carry.rs  addsub_ext.rs  addsub_pt.rs  addsub_shift.rs  condcmp_imm.rs  condcmp_reg.rs  condsel.rs  dp_1src.rs  dp_2src.rs  dp_3src.rs  log_shift.rs  rmif.rs  setf.rs
aarchmrs-instructions/src/A64/ldst/: asisdlse.rs  asisdlsep.rs  asisdlso.rs  asisdlsop.rs  comswap.rs  comswap_unpriv.rs  comswappr.rs  comswappr_unpriv.rs  ldapstl_simd.rs  ldapstl_unscaled.rs  ldapstl_writeback.rs  ldiappstilp.rs  ldst_gcs.rs  ldst_immpost.rs  ldst_immpre.rs  ldst_pac.rs  ldst_pos.rs  ldst_regoff.rs  ldst_unpriv.rs  ldst_unscaled.rs  ldstexclp.rs  ldstexclr.rs  ldstexclr_unpriv.rs  ldstnapair_offs.rs  ldstord.rs  ldstpair_off.rs  ldstpair_post.rs  ldstpair_pre.rs  ldsttags.rs  loadlit.rs  memcms.rs  memop.rs  memop_128.rs  memop_unpriv.rs  memset_go.rs  rcwcomswap.rs  rcwcomswappr.rs
aarchmrs-instructions/src/A64/reserved/: perm_undef.rs
aarchmrs-instructions/src/A64/simd_dp/: asimdall.rs  asimddiff.rs  asimdelem.rs  asimdext.rs  asimdimm.rs  asimdins.rs  asimdmisc.rs  asimdmiscfp16.rs  asimdperm.rs  asimdsame.rs  asimdsame2.rs  asimdsamefp16.rs  asimdshf.rs  asimdtbl.rs  asisddiff.rs  asisdelem.rs  asisdmisc.rs  asisdmiscfp16.rs  asisdone.rs  asisdpair.rs  asisdsame.rs  asisdsame2.rs  asisdsamefp16.rs  asisdshf.rs  crypto3_imm2.rs  crypto3_imm6.rs  crypto4.rs  cryptoaes.rs  cryptosha2.rs  cryptosha3.rs  cryptosha512_2.rs  cryptosha512_3.rs  float2fix.rs  float2int.rs  floatccmp.rs  floatcmp.rs  floatdp1.rs  floatdp2.rs  floatdp3.rs  floatimm.rs  (+1 more)
aarchmrs-instructions/src/A64/sme/: mortlach2_64bit_prod4.rs  mortlach2_misc_prod.rs  mortlach2_prod4.rs  mortlach2_ss_prod.rs  mortlach_32bit_fp_prod.rs  mortlach_32bit_int_prod.rs  mortlach_64bit_prod.rs  mortlach_ext.rs  mortlach_hvadd.rs  mortlach_ins.rs  mortlach_mem.rs  mortlach_mov_zt.rs  mortlach_multi_array_1a.rs  mortlach_multi_array_1b.rs  mortlach_multi_array_2a.rs  mortlach_multi_array_2b.rs  mortlach_multi_indexed_1.rs  mortlach_multi_indexed_2.rs  mortlach_multi_indexed_3.rs  mortlach_multi_mem_ctg.rs  mortlach_multi_mem_nctg.rs  mortlach_multi_sve_1.rs  mortlach_multi_sve_2a.rs  mortlach_multi_sve_2b.rs  mortlach_multi_sve_2c0.rs  mortlach_multi_sve_2c1.rs  mortlach_multi_sve_2d0.rs  mortlach_multi_sve_2d1.rs  mortlach_multi_sve_3.rs  mortlach_multi_sve_4.rs  mortlach_multi_sve_5a.rs  mortlach_multi_sve_5b.rs  mortlach_multi_sve_6.rs  mortlach_multizero.rs  mortlach_zero.rs  mortlach_zero_zt.rs  mortlach_zt_expand_ctg.rs  mortlach_zt_expand_nctg.rs
aarchmrs-instructions/src/A64/sve/: sve_abal.rs  sve_alloca.rs  sve_cmpgpr.rs  sve_cmpsimm.rs  sve_cmpuimm.rs  sve_cmpvec.rs  sve_countelt.rs  sve_fp8_fma_w.rs  sve_fp8_fma_w_by_indexed_elem.rs  sve_fp8_fma_ww_by_indexed_elem.rs  sve_fp8_fmmla.rs  sve_fp_clamp.rs  sve_fp_cmpvev.rs  sve_fp_cmpzero.rs  sve_fp_fastreduce.rs  sve_fp_fastreduceq.rs  sve_fp_fcadd.rs  sve_fp_fcmla.rs  sve_fp_fcmla_by_indexed_elem.rs  sve_fp_fcvt2.rs  sve_fp_fcvt2z.rs  sve_fp_fma.rs  sve_fp_fma_by_indexed_elem.rs  sve_fp_fma_w.rs  sve_fp_fma_w_by_indexed_elem.rs  sve_fp_fmmla.rs  sve_fp_fmmla_nw.rs  sve_fp_fmul_by_indexed_elem.rs  sve_fp_pairwise.rs  sve_fp_pred.rs  sve_fp_slowreduce.rs  sve_fp_unary.rs  sve_fp_unary_unpred.rs  sve_fp_unpred.rs  sve_fp_zeroing_unary.rs  sve_index.rs  sve_int_adr.rs  sve_int_muladd_pred.rs  sve_int_pred_bin.rs  sve_int_pred_red.rs  (+56 more)
aarchmrs-instructions/src/T32/: b16.rs  n.rs  w.rs
aarchmrs-instructions/src/T32/n/: addpcsp16.rs  brc.rs  dpint16_2l.rs  ldlit16.rs  (+8 more)
aarchmrs-parser/: Cargo.toml  README.md
aarchmrs-parser/src/: instructions.rs  lib.rs
aarchmrs-types/: CHANGELOG.md  Cargo.toml  README.md
aarchmrs-types/src/: bit_value.rs  instruction_code.rs  lib.rs
harm/: Cargo.toml  README.md
harm-runtime/: Cargo.toml
harm-runtime/src/: labels.rs  lib.rs  memory.rs  runtime.rs
harm-runtime/src/memory/: memmap2.rs
harm-types/: Cargo.toml
harm-types/src/: A64.rs  lib.rs
harm-types/src/A64/: register.rs
harm/benches/: logical_immediate.rs
harm/src/: bits.rs  instructions.rs  lib.rs  outcome.rs  register.rs  reloc.rs  sealed.rs
harm/src/instructions/: arith.rs  branches.rs  control.rs  dpimm.rs  dpreg.rs  ldst.rs  load.rs  logical.rs  mov.rs  movewide.rs
harm/src/reloc/: addr.rs  claude_tests.rs  control.rs  data.rs  movs.rs
tools/aarchmrs-generate/: Cargo.toml
tools/aarchmrs-generate/src/: main.rs
(+753 files in other folders)
