[workspace]

members = [
   "aarchmrs-gen",
   "aarchmrs-instructions",
   "aarchmrs-parser",
   "aarchmrs-types",
   "tools/aarchmrs-generate",
]

resolver = "3"

[workspace.dependencies]
aarchmrs-gen = { path = "aarchmrs-gen", version = "0.2.0-2025-06" }
aarchmrs-instructions = { path = "aarchmrs-instructions", version = "0.1.1-2025-03" }
aarchmrs-parser = { path = "aarchmrs-parser", version = "0.1.0" }
aarchmrs-types = { path = "aarchmrs-types", version = "0.1.1" }
