[package]
name = "aarchmrs-gen"
version = "0.1.0-2025-03"
edition = "2024"
description = "AARCHMRS generator"
license = "MIT"
authors = ["Ivan Boldyrev <lispnik@gmail.com>"]

[dependencies]
aarchmrs-parser = { workspace = true }

itertools = "0.14.0"
prettyplease = "0.2.32"
proc-macro2 = "1.0.95"
quote = "1.0.40"
serde_json = "1.0.140"
syn = { version = "2.0.101", features = ["full"] }
