[package]
name = "aarchmrs-gen"
version = "0.1.0-2025-03"
edition = "2024"
description = "AARCHMRS generator"
license = "BSD-3-Clause"
authors = ["Ivan Boldyrev <lispnik@gmail.com>"]
repository = "https://github.com/monoid/harm/"
keywords = ["arm", "aarch64", "aarchmrs"]
categories = ["hardware-support"]
publish = false

[dependencies]
aarchmrs-parser = { workspace = true }

flate2 = "1.1.1"
hex-literal = "1.0.0"
itertools = "0.14.0"
md-5 = "0.10.6"
prettyplease = "0.2.32"
proc-macro2 = "1.0.95"
quote = "1.0.40"
serde_json = "1.0.140"
syn = { version = "2.0.101", features = ["full"] }
tar = "0.4.44"
thiserror = "2.0.12"
ureq = "3.0.11"

[dev-dependencies]
pretty_assertions = "1.4.1"
