[package]
name = "aarchmrs-instructions"
version = "0.1.0-2025-03"
edition = "2024"
description = "AARCHMRS-generated ARM instructions functions"
license = "BSD-3-Clause"
authors = ["Ivan Boldyrev <lispnik@gmail.com>", "Arm Limited"]

[dependencies]
aarchmrs-types = { workspace = true }

[build-dependencies]
aarchmrs-gen = { workspace = true }
