[package]
name = "aarchmrs-instructions"
version = "0.2.0-2025-06"
edition = "2024"
description = "AARCHMRS-generated ARM instructions functions"
license = "BSD-3-Clause"
authors = ["Ivan Boldyrev <lispnik@gmail.com>", "Arm Limited"]
repository = "https://github.com/monoid/harm/"
keywords = ["arm", "aarch64", "aarchmrs", "assembler", "jit"]
categories = ["compilers", "hardware-support"]

[dependencies]
aarchmrs-types = { workspace = true }

[features]
default = ["A64"]
meta = []
A64 = []
A32 = []
T32 = []
