[package]
name = "aarchmrs-parser"
version = "0.1.0"
edition = "2024"
description = "AARCHMRS simple parser"
license = "BSD-3-Clause"
authors = ["Ivan Boldyrev <lispnik@gmail.com>"]
repository = "https://github.com/monoid/harm/"
keywords = ["arm", "aarch64", "aarchmrs"]
categories = ["hardware-support"]
publish = false

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
