[package]
name = "aarchmrs-types"
version = "0.1.1"
edition = "2024"
description = "AARCHMRS common types"
license = "BSD-3-Clause"
authors = ["Ivan Boldyrev <lispnik@gmail.com>"]
repository = "https://github.com/monoid/harm/"
keywords = ["arm", "aarch64", "assembler", "jit"]
categories = ["hardware-support"]

[dependencies]
hex = { version = "0.4.3", default-features = false }

[dev-dependencies]
hex = { version = "0.4.3" }
