[package]
name = "harm-runtime"
version = "0.1.0"
edition = "2024"
description = "AArch64 (ARM64) dynamic assembler runtime"
license = "BSD-3-Clause"
authors = ["Ivan Boldyrev <lispnik@gmail.com>"]
repository = "https://github.com/monoid/harm/"
keywords = ["arm", "aarch64", "aarchmrs", "assembler", "jit"]
categories = ["compilers", "hardware-support"]
publish = false

[dependencies]
harm = { workspace = true }

[dev-dependencies]

[features]
