[package]
name = "harm-runtime"
version = "0.1.0"
edition = "2024"
description = "AArch64 (ARM64) dynamic assembler runtime"
license = "BSD-3-Clause"
authors = ["Ivan Boldyrev <lispnik@gmail.com>"]
repository = "https://github.com/monoid/harm/"
keywords = ["arm", "aarch64", "aarchmrs", "assembler", "jit"]
categories = ["compilers", "hardware-support"]
publish = false

[dependencies]
harm = { workspace = true }
memmap2 = { version = "0.9.9", optional = true }
thiserror = "2.0.18"

[features]
default = ["memmap2"]
memmap2 = ["dep:memmap2"]
