[package]
name = "harm-types"
version = "0.1.0"
edition = "2024"
description = "Definitions for a AArch64 (ARM64) dynamic assembler"
license = "BSD-3-Clause"
authors = ["Ivan Boldyrev <lispnik@gmail.com>"]
repository = "https://github.com/monoid/harm/"
keywords = ["arm", "aarch64", "aarchmrs", "assembler", "jit"]
categories = ["compilers", "hardware-support"]
publish = false

[dependencies]
aarchmrs-types = { workspace = true }
num_enum = { version = "0.7.4", default-features = false }
