[package]
name = "harm"
version = "0.1.0"
edition = "2024"
description = "AArch64 (ARM64) Assembler"
license = "BSD-3-Clause"
authors = ["Ivan Boldyrev <lispnik@gmail.com>"]
publish = false

[dependencies]
aarchmrs-types = { workspace = true }
aarchmrs-instructions = { workspace = true }
paste = "1.0.15"
